--- a/docs/10.EXT-REFERENCE-HANDLER.md
+++ b/docs/10.EXT-REFERENCE-HANDLER.md
@@ -351,15 +351,14 @@ jerryx_handler_gc (const jerry_value_t func_obj_val, const jerry_value_t this_p,
 **Summary**
 
 Provide a `print` implementation for scripts. The routine converts all of its
-arguments to strings and outputs them char-by-char using
-`jerry_port_print_byte`. The NULL character is output as "\u0000",
-other characters are output bytewise.
+arguments to strings and outputs them by using `jerry_port_print_buffer`.
+The NULL character is output as "\u0000", other characters are output bytewise.
 
 *Note*: This implementation does not use standard C `printf` to print its
 output. This allows more flexibility but also extends the core JerryScript
 engine port API. Applications that want to use `jerryx_handler_print` must
 ensure that their port implementation also provides
-`jerry_port_print_byte`.
+`jerry_port_print_buffer`.
 
 **Prototype**
 
@@ -379,7 +378,7 @@ jerryx_handler_print (const jerry_value_t func_obj_val, const jerry_value_t this
 **See also**
 
 - [jerryx_register_global](#jerryx_register_global)
-- [jerry_port_print_byte](05.PORT-API.md#jerry_port_print_char)
+- [jerry_port_print_buffer](05.PORT-API.md#jerry_port_print_buffer)
 
 
 # Handler registration helper
