--- a/docs/16.MIGRATION-GUIDE.md
+++ b/docs/16.MIGRATION-GUIDE.md
@@ -770,3 +770,4 @@ In this section the new API functions are listed.
 - [`jerry_port_get_current_context`](05.PORT-API.md#jerry_port_get_current_context)
 - [`jerry_port_fatal`](05.PORT-API.md#jerry_port_fatal)
 - [`jerry_port_sleep`](05.PORT-API.md#jerry_port_sleep)
+- [`jerry_port_print_byte`](05.PORT-API.md#jerry_port_print_byte)
