--- a/docs/10.EXT-REFERENCE-HANDLER.md
+++ b/docs/10.EXT-REFERENCE-HANDLER.md
@@ -265,12 +265,13 @@ a backtrace is also printed out.
 
 ```c
 jerry_value_t
-jerryx_handler_assert_fatal (const jerry_value_t func_obj_val, const jerry_value_t this_p,
-                             const jerry_value_t args_p[], const jerry_length_t args_cnt);
+jerryx_handler_assert_fatal (const jerry_call_info_t *call_info_p,
+                             const jerry_value_t args_p[],
+                             const jerry_length_t args_cnt);
 ```
 
-- `func_obj_val` - the function object that was called (unused).
-- `this_p` - the `this` value of the call (unused).
+- `call_info_p` - pointer to a [jerry_call_info_t](#jerry_call_info_t)
+                  structure which holds call related information (unused).
 - `args_p` - the array of function arguments.
 - `args_cnt` - the number of function arguments.
 - return value - `jerry_value_t` representing boolean true, if only one argument
@@ -292,12 +293,13 @@ Soft assert for scripts. The routine throws an error on assertion failure.
 
 ```c
 jerry_value_t
-jerryx_handler_assert_throw (const jerry_value_t func_obj_val, const jerry_value_t this_p,
-                             const jerry_value_t args_p[], const jerry_length_t args_cnt);
+jerryx_handler_assert_throw (const jerry_call_info_t *call_info_p,
+                             const jerry_value_t args_p[],
+                             const jerry_length_t args_cnt);
 ```
 
-- `func_obj_val` - the function object that was called (unused).
-- `this_p` - the `this` value of the call (unused).
+- `call_info_p` - pointer to a [jerry_call_info_t](#jerry_call_info_t)
+                  structure which holds call related information (unused).
 - `args_p` - the array of function arguments.
 - `args_cnt` - the number of function arguments.
 - return value - `jerry_value_t` representing boolean true, if only one argument
@@ -331,12 +333,13 @@ gc is performed, which is also the default if no parameters passed.
 
 ```c
 jerry_value_t
-jerryx_handler_gc (const jerry_value_t func_obj_val, const jerry_value_t this_p,
-                   const jerry_value_t args_p[], const jerry_length_t args_cnt);
+jerryx_handler_gc (const jerry_call_info_t *call_info_p,
+                   const jerry_value_t args_p[],
+                   const jerry_length_t args_cnt);
 ```
 
-- `func_obj_val` - the function object that was called (unused).
-- `this_p` - the `this` value of the call (unused).
+- `call_info_p` - pointer to a [jerry_call_info_t](#jerry_call_info_t)
+                  structure which holds call related information (unused).
 - `args_p` - the array of function arguments (unused).
 - `args_cnt` - the number of function arguments (unused).
 - return value - `jerry_value_t` representing `undefined`.
@@ -365,12 +368,13 @@ ensure that their port implementation also provides
 
 ```c
 jerry_value_t
-jerryx_handler_print (const jerry_value_t func_obj_val, const jerry_value_t this_p,
-                      const jerry_value_t args_p[], const jerry_length_t args_cnt);
+jerryx_handler_print (const jerry_call_info_t *call_info_p,
+                      const jerry_value_t args_p[],
+                      const jerry_length_t args_cnt);
 ```
 
-- `func_obj_val` - the function object that was called (unused).
-- `this_p` - the `this` value of the call (unused).
+- `call_info_p` - pointer to a [jerry_call_info_t](#jerry_call_info_t)
+                  structure which holds call related information (unused).
 - `args_p` - the array of function arguments.
 - `args_cnt` - the number of function arguments.
 - return value - `jerry_value_t` representing `undefined` if all arguments could
@@ -398,7 +402,7 @@ longer needed.
 ```c
 jerry_value_t
 jerryx_register_global (const char *name_p,
-                                jerry_external_handler_t handler_p);
+                        jerry_external_handler_t handler_p);
 ```
 
 - `name_p` - the name of the function to be registered.
